[gd_scene load_steps=4 format=3 uid="uid://cpw0lcslh8283"]

[ext_resource type="Script" path="res://Node2D2.gd" id="1_3mskn"]
[ext_resource type="AudioStream" uid="uid://civ68fpj5thsc" path="res://Квакушки.mp3" id="2_6i18w"]
[ext_resource type="AudioStream" uid="uid://bdq283oot0vtq" path="res://Трунь.mp3" id="3_4mshe"]

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_3mskn")

[node name="Button" type="Button" parent="."]
offset_left = 361.0
offset_top = 149.0
offset_right = 709.0
offset_bottom = 215.0

[node name="Button2" type="Button" parent="."]
offset_left = 366.0
offset_top = 262.0
offset_right = 714.0
offset_bottom = 328.0

[node name="Button3" type="Button" parent="."]
offset_left = 367.0
offset_top = 371.0
offset_right = 715.0
offset_bottom = 437.0

[node name="FrogsSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6i18w")

[node name="DingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4mshe")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
